name:                steiner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/opengl-Steiner#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2019 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     InvertedCircle
                     , Chains
                     , Steiner
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , gl-capture
                     , bytestring
                     , linear
                     , directory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/opengl-Steiner
